fdo#48356 fix RTF import of special unicode characters

The \'0d string should not be an exception when ignoring characters
after the \u control word.